--- a/gionee/htm/men/men.html
+++ b/gionee/htm/men/men.html
@@ -19,7 +19,8 @@
 	<img src="images/say.png" alt="敢爱，讲出来" class="img">
 </div>
 <div id="content" class="pa l0 t0">
-	    
+	 
+      
     <div class="text justify">
     	<strong>what！！！</strong>女王节来啦你还没有准备礼物
     </div>
@@ -32,14 +33,19 @@
     <div class="text justify">
     	<strong>SO！！！</strong>有一个机会来啦！登上故事锁屏，成为故事锁屏的女王
     </div>
-     <div class="text justify">
-    	参与方式：你只需要：把你想对“<strong>女王</strong>”说的话+女王的名字，发送到故事锁屏微信公众号（微信号：gushi_cn，小编会从中挑选优秀人员获奖哦！获奖选手的经典语录将有机会登上我们的故事锁屏哦！
+     <div class="text justify pTitle">
+    	【参与方式】
     </div>
-    <div class="pText tl">
+    <div class="pText justify">
+	    你只需要：把你想对“<strong>女王</strong>”说的话+女王的名字，发送到故事锁屏微信公众号（微信号：gushi_cn，小编会从中挑选优秀人员获奖哦！获奖选手的经典语录将有机会登上我们的故事锁屏哦！
+    </div>
+    <div class="pText tl pTitle">
     	【活动时间】 
     </div>
      <div class="pText justify">
-    	3月7日参与活动，3月8日公布获奖名单+发奖励！
+    	1、3月7日参与活动 <br>
+        2、3月8日微信公布中奖名单，锁屏会进行故事锁屏爱的宣言的展示<br>
+        3、3月9日-3月10日小编联系中奖名单安排发奖
     </div>
     <div class="pText tc pText1">
     	【奖品】
