--- a/gionee/htm/men/men.html
+++ b/gionee/htm/men/men.html
@@ -19,8 +19,6 @@
 	<img src="images/say.png" alt="敢爱，讲出来" class="img">
 </div>
 <div id="content" class="pa l0 t0">
-	 
-      
     <div class="text justify">
     	<strong>what！！！</strong>女王节来啦你还没有准备礼物
     </div>
@@ -28,16 +26,16 @@
     	礼物是什么还没有想好！
     </div>
     <div class="text tc">
-    	平常的礼物怎么拿的出手
+    	平常的礼物怎么拿的出手！
     </div>
     <div class="text justify">
-    	<strong>SO！！！</strong>有一个机会来啦！登上故事锁屏，成为故事锁屏的女王
+    	<strong>SO！！！</strong>有一个机会来啦！帮你的女王登上故事锁屏，大声讲出爱的宣言！
     </div>
      <div class="text justify pTitle">
     	【参与方式】
     </div>
     <div class="pText justify">
-	    你只需要：把你想对“<strong>女王</strong>”说的话+女王的名字，发送到故事锁屏微信公众号（微信号：gushi_cn，小编会从中挑选优秀人员获奖哦！获奖选手的经典语录将有机会登上我们的故事锁屏哦！
+	    你只需要：把你想对“<strong>女王</strong>”说的话+你的女王的名字，发送到故事锁屏微信公众号（微信号：gushi_cn，小编会从中挑选优秀人员获奖哦！获奖选手的经典语录将有机会登上我们的故事锁屏哦！
     </div>
     <div class="pText tl pTitle">
     	【活动时间】 
