--- a/gionee/htm/men/men.html
+++ b/gionee/htm/men/men.html
@@ -20,7 +20,7 @@
 </div>
 <div id="content" class="pa l0 t0">
     <div class="text justify">
-    	<strong>what！！！</strong>女王节来啦你还没有准备礼物
+    	<strong class="big">What</strong>！！！女王节来啦你还没有准备礼物
     </div>
     <div class="text tc">
     	礼物是什么还没有想好！
@@ -29,7 +29,7 @@
     	平常的礼物怎么拿的出手！
     </div>
     <div class="text justify">
-    	<strong>SO！！！</strong>有一个机会来啦！帮你的女王登上故事锁屏，大声讲出爱的宣言！
+    	<strong class="big">So</strong>！！！有一个机会来啦！帮你的女王登上故事锁屏，大声讲出爱的宣言！
     </div>
      <div class="text justify pTitle">
     	【参与方式】
@@ -42,7 +42,7 @@
     </div>
      <div class="pText justify">
     	1、3月7日参与活动 <br>
-        2、3月8日微信公布中奖名单，锁屏会进行故事锁屏爱的宣言的展示<br>
+        2、3月8日微信公众账号公布中奖名单，展示女王节爱的宣言<br>
         3、3月9日-3月10日小编联系中奖名单安排发奖
     </div>
     <div class="pText tc pText1">
