--- a/gionee/htm/testFont/size2.html
+++ b/gionee/htm/testFont/size2.html
@@ -16,6 +16,11 @@ span{ background:red;}
 <script>
 document.addEventListener('DOMContentLoaded',function(){
 	
+	if(getStyle(document.getElementById('span1'),'fontSize') != document.getElementsByTagName('html')[0].style.fontSize){
+		alert('系统字体或浏览器字体大小有变化');	
+		document.getElementsByTagName('html')[0].setAttribute('style','font-size:'+document.documentElement.clientWidth/40+'px')
+	};
+	
 	document.getElementById('span2').innerHTML = document.getElementById('span1').offsetWidth;	
 	document.getElementById('span3').innerHTML = getStyle(document.getElementById('span1'),'fontSize');
 	document.getElementById('span4').innerHTML = document.documentElement.clientWidth;
