--- a/gionee/htm/testFont/size2.html
+++ b/gionee/htm/testFont/size2.html
@@ -15,14 +15,16 @@ span{ background:red;}
 </style>
 <script>
 document.addEventListener('DOMContentLoaded',function(){
-	
-	if(parseInt(getStyle(document.getElementById('span1'),'fontSize')) != parseInt(document.getElementsByTagName('html')[0].style.fontSize)){
+	//alert(document.getElementsByTagName('html')[0].style.fontSize);
+	if(parseFloat(getStyle(document.getElementById('span1'),'fontSize')) != parseFloat(document.getElementsByTagName('html')[0].style.fontSize)){
 		//alert('系统字体或浏览器字体大小有变化');	
-		document.body.style.backgroundColor = 'green';
+		//document.body.style.backgroundColor = 'green';
 		var cw = document.documentElement.clientWidth;
 		cw = cw > 640 ? 640 : cw;
-		document.getElementsByTagName("html")[0].style.fontSize = cw / 16 + "px";
-		document.getElementById('span7').innerHTML = parseInt(getStyle(document.getElementById('span1'),'fontSize')) / parseInt(document.getElementsByTagName('html')[0].style.fontSize) ;
+		var n = parseFloat(getStyle(document.getElementById('span1'),'fontSize')) / parseFloat(document.getElementsByTagName('html')[0].style.fontSize);
+		document.getElementsByTagName("html")[0].style.fontSize = parseFloat(document.getElementsByTagName('html')[0].style.fontSize) / n + "px";
+		//alert(document.getElementsByTagName('html')[0].style.fontSize);
+		document.getElementById('span7').innerHTML = n;
 	};
 	
 	document.getElementById('span2').innerHTML = document.getElementById('span1').offsetWidth;	
