--- a/gionee/htm/men/men.html
+++ b/gionee/htm/men/men.html
@@ -10,11 +10,11 @@
 <script type="text/javascript" src="js/size.js"></script>
 <link rel="stylesheet" type="text/css" href="css/reset.css">
 <link rel="stylesheet" type="text/css" href="css/men.css">
-<style>
-#span1{ font-size:1em; position:absolute; left:-120%; top:-120%;}
-</style>
 <script>
 document.addEventListener('DOMContentLoaded',function(){
+	var oSpan = document.createElement('span');
+	oSpan.id = 'span1';
+	document.body.appendChild(oSpan);
 	if(parseFloat(getStyle(document.getElementById('span1'),'fontSize')) != parseFloat(document.getElementsByTagName('html')[0].style.fontSize)){
 		var n = parseFloat(getStyle(document.getElementById('span1'),'fontSize')) / parseFloat(document.getElementsByTagName('html')[0].style.fontSize);
 		document.getElementsByTagName("html")[0].style.fontSize = parseFloat(document.getElementsByTagName('html')[0].style.fontSize) / n + "px";
@@ -30,7 +30,6 @@ document.addEventListener('DOMContentLoaded',function(){
 </script>
 </head>
 <body>
-<span id="span1">字体</span>
 <div id="bg" class="pr l0 t0">
 	<img src="images/base.png" alt="底部花纹" class="img">
 </div>
