--- a/gionee/htm/testFont/size2.html
+++ b/gionee/htm/testFont/size2.html
@@ -24,7 +24,7 @@ document.addEventListener('DOMContentLoaded',function(){
 		return parseFloat(arr[1]);	
 	};
 	
-	alert();
+	alert(getNum(str));
 	
 	if(getNum(str) != parseFloat(document.getElementsByTagName('html')[0].style.fontSize)){
 		//alert('系统字体或浏览器字体大小有变化');
