--- a/gionee/htm/test/location.html
+++ b/gionee/htm/test/location.html
@@ -57,8 +57,8 @@ window.onload = function(){
 		return str.split('/')[1].split(';')[1]	
 	};
 	
-	oDiv6.innerHTML = getName(str);
-	oDiv7.innerHTML = getVersion(str);
+	oDiv6.innerHTML = getName(navigator.userAgent);
+	oDiv7.innerHTML = getVersion(navigator.userAgent);
 };
 </script>
 </head>
