--- a/gionee/htm/test/location.html
+++ b/gionee/htm/test/location.html
@@ -50,7 +50,7 @@ window.onload = function(){
 	//var str = 'Mozilla/5.0(linux;Android 5.1;M5 Build/LMY47D;wv)AppleWebKit/537.36(KHTML,like Gecko)Version/4.0Chrome/42.0.2311.137Mobile Safari/537.36';
 	
 	function getName(str){
-		return str.split('/')[1].split(';')[2].split(' ')[0]	
+		return str.split('/')[1].split(';')[2]	
 	};
 	
 	function getVersion(str){
