--- a/gionee/htm/test/location.html
+++ b/gionee/htm/test/location.html
@@ -57,7 +57,7 @@ window.onload = function(){
 		return str.split('/')[1].split(';')[1]	
 	};
 	
-	oDiv6.innerHTML = getName(navigator.userAgent);
+	oDiv6.innerHTML = getName(navigator.userAgent) +'--'+getName(navigator.userAgent).length;
 	oDiv7.innerHTML = getVersion(navigator.userAgent);
 };
 </script>
