--- a/gionee/htm/test/time.html
+++ b/gionee/htm/test/time.html
@@ -24,7 +24,7 @@ window.onbeforeunload = function(){
 	function check(){
 		var frm = document.forms["gionee_form"];
 		var ifm = document.getElementById("gionee_iframe");
-		frm.action = "http://game/closetest.do?timestamp="+time2;
+		frm.action = "http://t-nav.gionee.com/game/closetest.do?timestamp="+time2;
 		frm.target = "gionee_iframe";
 		frm.submit();
 	};
