--- a/gionee/htm/test/testVedio.html
+++ b/gionee/htm/test/testVedio.html
@@ -87,7 +87,7 @@ document.addEventListener('DOMContentLoaded',function(){
         item.removeAttribute("height");
         //item.style.width = document.clientWidth-30+'px';
         item.setAttribute("preload","none");
-        item.setAttribute("poster","1.jpg");
+        //item.setAttribute("poster","1.jpg");
         item.setAttribute("width",document.body.clientWidth-30+"px");
         item.setAttribute("height",(document.body.clientWidth-30)*scale+"px");
         //alert(1);
