--- a/gionee/htm/test/demo1/index.html
+++ b/gionee/htm/test/demo1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Demo 1 | Custom HTML5 Video Controls with jQuery</title>
-<link rel="stylesheet" href="../vendorstyle.css" />
+<link rel="stylesheet" href="vendorstyle.css" />
 <link rel="stylesheet" href="style.css" />
 <script src="jquery.js"></script>
 <!--[if lt IE 9]>
