--- a/gionee/htm/test/testVedio.html
+++ b/gionee/htm/test/testVedio.html
@@ -94,6 +94,7 @@ document.addEventListener('DOMContentLoaded',function(){
     });
     //alert(navigator.onLine) 
 	document.getElementById("v1").onclick = function(){
+        this.setAttribute('preload','auto');
         this.setAttribute('autobuffer','true')
     };
 			
