--- a/gionee/htm/test/testVedio.html
+++ b/gionee/htm/test/testVedio.html
@@ -112,7 +112,7 @@ document.addEventListener('DOMContentLoaded',function(){
     <p class="source">金立通信设备</p>
     <p class="time">2016-03-26</p>
     <p>
-        <video class="edui-upload-video  vjs-default-skin video-js" id="v1" controls="" preload="none" width="420" height="280" src="1.mp4" data-setup="{}">
+        <video class="edui-upload-video  vjs-default-skin video-js" id="v1" x-webkit-airplay="true" webkit-playsinline="true" controls preload="none" width="420" height="280" src="1.mp4" data-setup="{}">
             <source src="1.mp4" type="video/mp4"/>
         </video>
     </p>
