--- a/gionee/htm/video/video2.html
+++ b/gionee/htm/video/video2.html
@@ -14,6 +14,6 @@
 	<input type="submit" value="提交" id="copy">
 	<audio src="1.mp3" autoplay="true" controls style="display:block; width:100%;"></audio>
 </form>-->
-<video id="tenvideo_video_player_0" width="100%" controls height="100%" x-webkit-airplay="true" webkit-playsinline="true" preload="none" poster="" src="http://d.gionee.com/nav/test1.mp4"></video>
+<video id="tenvideo_video_player_0" width="100%" controls height="100%" x-webkit-airplay="true" webkit-playsinline="true" preload="none" poster="http://shp.qpic.cn/qqvideo_ori/0/d1304qvxoyo_496_280/0" src="http://d.gionee.com/nav/test1.mp4"></video>
 </body>
 </html>
