--- a/gionee/htm/test/pic.html
+++ b/gionee/htm/test/pic.html
@@ -10,7 +10,7 @@
 </head>
 <style>
 *{ margin:0; padding:0;}
-body{ width:100%; height:100%; background:url(11.jpg) no-repeat; background-position:center; background-size:cover}
+body{ width:100%; height:100%; background:url(11.jpg) no-repeat; background-position:center top; background-size:cover}
 </style>
 <body>
 </body>
