--- a/gionee/htm/test/pic.html
+++ b/gionee/htm/test/pic.html
@@ -10,8 +10,10 @@
 </head>
 <style>
 *{ margin:0; padding:0;}
-body{ width:100%; height:100%; background:url(11.jpg) no-repeat; background-position:center top; background-size:100% 100%;}
+body,html{ width:100%; height:100%;}
+img{ display:block;}
 </style>
 <body>
+<img src="11.jpg" alt="" width="100%" height="100%">
 </body>
 </html>
