--- a/gionee/htm/april/03/monster.html
+++ b/gionee/htm/april/03/monster.html
@@ -11,9 +11,10 @@
 <style>
 *{ margin:0; padding:0;}
 body,html{ width:100%; height:100%;}
+body{ max-width: 640px; margin: 0 auto;}
 img{ display:block;}
 </style>
 <body>
-<img src="monster.jpg" alt="" width="100%" height="100%">
+<img src="monster.jpg" alt="怪物" width="100%" height="100%">
 </body>
 </html>
