--- a/gionee/htm/april/01/fish.html
+++ b/gionee/htm/april/01/fish.html
@@ -11,6 +11,7 @@
 <style>
 *{ margin:0; padding:0;}
 body,html{ width:100%; height:100%;}
+body{ max-width: 640px; margin: 0 auto;}
 img{ display:block;}
 </style>
 <body>
