--- a/gionee/htm/april/02/dog.html
+++ b/gionee/htm/april/02/dog.html
@@ -11,9 +11,10 @@
 <style>
 *{ margin:0; padding:0;}
 body,html{ width:100%; height:100%;}
+body{ max-width: 640px; margin: 0 auto;}
 img{ display:block;}
 </style>
 <body>
-<img src="dog.jpg" alt="" width="100%" height="100%">
+<img src="dog.jpg" alt="不要跑在狗前面" width="100%" height="100%">
 </body>
 </html>
