--- a/gionee/htm/test/demo1/index.html
+++ b/gionee/htm/test/demo1/index.html
@@ -42,7 +42,7 @@ $(document).ready(function() {
 <div class="videoContainer">
 	
 	<video id="myVideo" controls preload="none" poster="poster.jpg" width="600" height="350" >
-	  <source src="1.mp4" type="video/mp4" />
+	  <source src="http://d.gionee.com/nav/test1.mp4" type="video/mp4" />
 	  <p>Your browser does not support the video tag.</p>
 	</video>
 	<div class="caption">This is HTML5 video with custom controls</div>
