--- a/gionee/htm/test/size2.html
+++ b/gionee/htm/test/size2.html
@@ -15,6 +15,7 @@ document.addEventListener('DOMContentLoaded',function(){
 		iNow++;
 		window.localStorage.setItem("go",iNow);	
 		console.log(iNow);
+		this.innerHTML = "开始跳转";
 		document.getElementById("test").innerHTML = iNow;
 	};
 	console.log(888);	
