--- a/gionee/htm/test/size2.html
+++ b/gionee/htm/test/size2.html
@@ -23,7 +23,7 @@ document.addEventListener('DOMContentLoaded',function(){
 </script>
 </head>
 <body style="padding-top:1000px;">
-<a href="http://localhost:8080/aaaaa/size.html" target="_self" id="go">跳转1</a>
+<a href="http://wentao978.github.io/gionee/htm/test/wifi.html" target="_self" id="go">跳转1</a>
 <div id="test"></div>
 </body>
 </html>
