--- a/gionee/htm/test/size2.html
+++ b/gionee/htm/test/size2.html
@@ -24,6 +24,6 @@ document.addEventListener('DOMContentLoaded',function(){
 </head>
 <body style="padding-top:1000px;">
 <a href="http://wentao978.github.io/gionee/htm/test/wifi.html" target="_self" id="go">跳转1</a>
-<div id="test"></div>
+<div id="test">-1</div>
 </body>
 </html>
