--- a/gionee/htm/test/size2.html
+++ b/gionee/htm/test/size2.html
@@ -17,13 +17,14 @@ document.addEventListener('DOMContentLoaded',function(){
 		console.log(iNow);
 		this.innerHTML = "开始跳转";
 		document.getElementById("test").innerHTML = iNow;
+		window.location.href = "http://wentao978.github.io/gionee/htm/test/wifi.html";
 	};
 	console.log(888);	
 },!1);
 </script>
 </head>
 <body style="padding-top:1000px;">
-<a href="http://wentao978.github.io/gionee/htm/test/wifi.html" target="_self" id="go">跳转1</a>
-<div id="test">-1</div>
+<a href="javascript:;" target="_self" id="go">跳转1</a>
+<div id="test">-2</div>
 </body>
 </html>
