--- a/gionee/htm/test/size2.html
+++ b/gionee/htm/test/size2.html
@@ -13,7 +13,7 @@ document.addEventListener('DOMContentLoaded',function(){
 	var iNow = 0;
 	oG.onclick = function(){
 		iNow++;
-		window.localStorage.setItem("go",iNow);	
+		//window.localStorage.setItem("go",iNow);	
 		console.log(iNow);
 		this.innerHTML = "开始跳转";
 		document.getElementById("test").innerHTML = iNow;
