--- a/gionee/htm/test/size2.html
+++ b/gionee/htm/test/size2.html
@@ -23,7 +23,7 @@ document.addEventListener('DOMContentLoaded',function(){
 },!1);
 </script>
 </head>
-<body style="padding-top:1000px;">
+<body>
 <a href="http://wentao978.github.io/gionee/htm/test/wifi.html" target="_self" id="go">跳转1</a>
 <div id="test">-2</div>
 </body>
