--- a/gionee/htm/dwj/dwj.html
+++ b/gionee/htm/dwj/dwj.html
@@ -60,14 +60,14 @@
             	<span class="textName">金立S8</span>
                 <img src="images/my_s8.png" alt="s8手机" class="img">
             </a>
-            <a href="javascript:;" class="db fl">
-            	<span class="textName">50元话费</span>
-                <img src="images/my_50.png" alt="50元话费" class="img">
-            </a>
-            <a href="javascript:;" class="db fl">
-            	<span class="textName">金立S8</span>
-                <img src="images/my_s8.png" alt="s8手机" class="img">
-            </a>
+           <!--  <a href="javascript:;" class="db fl">
+               <span class="textName">50元话费</span>
+               <img src="images/my_50.png" alt="50元话费" class="img">
+           </a>
+           <a href="javascript:;" class="db fl">
+               <span class="textName">金立S8</span>
+               <img src="images/my_s8.png" alt="s8手机" class="img">
+           </a> -->
         </div>
     </div>
 
