--- a/gionee/htm/dwj/dwj.html
+++ b/gionee/htm/dwj/dwj.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="js/clipboard.min.js"></script>
 </head>
 <body>
-<!--<div id="loading">
+<div id="loading">
 	<div class="spinner">
         <div class="spinner-container container1">
           <div class="circle1"></div>
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="loadingText" id="loadingText">端午节刮刮乐···</div>
-</div>-->
+</div>
 <div id="bg" class="pf"></div>
 <div id="content">
 	<div class="topPicWrap">
@@ -60,17 +60,16 @@
             	<span class="textName">金立S8</span>
                 <img src="images/my_s8.png" alt="s8手机" class="img">
             </a>
-           <!--  <a href="javascript:;" class="db fl">
-               <span class="textName">50元话费</span>
-               <img src="images/my_50.png" alt="50元话费" class="img">
-           </a>
-           <a href="javascript:;" class="db fl">
-               <span class="textName">金立S8</span>
-               <img src="images/my_s8.png" alt="s8手机" class="img">
-           </a> -->
+            <!--<a href="javascript:;" class="db fl">
+            	<span class="textName">50元话费</span>
+                <img src="images/my_50.png" alt="50元话费" class="img">
+            </a>
+            <a href="javascript:;" class="db fl">
+            	<span class="textName">金立S8</span>
+                <img src="images/my_s8.png" alt="s8手机" class="img">
+            </a>-->
         </div>
     </div>
-
 	<div class="gameWrap">
     	<div class="gameText">游戏推荐</div>
         <div class="gameList">
@@ -91,7 +90,6 @@
             </a>
         </div>
     </div>
-
 	<div class="tipsWrap">
     	<div class="tipsText">活动说明</div>
        	<p>1.活动时间:2016-6-9 00:00:00-2016-6-10 00:00:00</p>
@@ -106,162 +104,12 @@
         <p class="qun">金立故事锁屏QQ群：142876462 </p>
         <p>金立游戏客服QQ号: 4006286618</p>
     </div>
-
-
-	<!--<div class="readTextWrap">
-    	<img src="images/readText.png" alt="读好书中大奖" class="img readText">
-    </div>
-    <div class="circleWrap">
-    	<img src="images/circleText.png" alt="幸运大转盘" class="img circleText">
-    </div>
-    <div class="iconWrap">
-    	<img src="images/gushi.png" alt="故事锁屏" class="img gushiIcon">
-        <img src="images/ireader.png" alt="掌阅科技" class="img ireaderIcon">
-    </div>
-    <div class="flowerWrap">
-    	<img src="images/flower.png" alt="花絮" class="img">
-    </div>
-    <div class="panWrap">
-    	<img src="images/pan.png" alt="大转盘" class="img pan">
-        <img src="images/zhuan.png" alt="转动" class="zhuan">
-        <img src="images/start.png" alt="点击按钮" class="start">
-    </div>
-    <div class="buttonWrap">
-    	<span class="ruleText">活动规则</span>
-        <span class="scord">中奖纪录</span>
-    </div>
-    <div class="bookWrap">
-    	<div class="bookText">世界读书日·掌阅请你读好书</div>
-        <div class="booklist">
-        	<a href="http://m.ireader.com/index.php?key=17W10897771&rgt=5&p2=104089&p5=16&pc=60&jump=jinli04141">
-            	<img src="images/book/santi.jpg" alt="三体合集[精品]" class="img">
-            </a>
-            <div class="bookInfo">
-            	<div class="booktitle">三体合集[精品]</div>
-                <div class="bookauthor">刘慈欣</div>
-                <div class="bookdetail">问鼎雨果奖，一部有关人类终极问题的巨作</div>
-            </div>
-        </div>
-       <div class="booklist">
-        	<a target="_blank" href="http://m.ireader.com/index.php?key=17W10908627&rgt=5&p2=104089&p5=16&pc=60&jump=jinli04142">
-            	<img src="images/book/dao.jpg" alt="岛上书店[精品]" class="img">
-            </a>
-            <div class="bookInfo">
-            	<div class="booktitle">岛上书店[精品]</div>
-                <div class="bookauthor">加布瑞埃拉泽文</div>
-                <div class="bookdetail">风行30个多国家的现象级全球畅销书！</div>
-            </div>
-        </div>
-       <div class="booklist">
-        	<a target="_blank"  href="http://m.ireader.com/index.php?key=17W10864168&rgt=5&p2=104089&p5=16&pc=60&jump=jinli04143">
-            	<img src="images/book/zhongguo.jpg" alt="中国再启动[精品]" class="img">
-            </a>
-            <div class="bookInfo">
-            	<div class="booktitle">中国再启动[精品]</div>
-                <div class="bookauthor">白岩松，龙永图</div>
-                <div class="bookdetail">白岩松妙解中国改革开放30年社会体验史</div>
-            </div>
-        </div>
-        <div class="booklist">
-        	<a target="_blank"  href="http://m.ireader.com/index.php?key=17W10085141&rgt=5&p2=104089&p5=16&pc=60&jump=jinli04144">
-            	<img src="images/book/shuide.jpg" alt="谁的青春不迷茫[精品]" class="img">
-            </a>
-            <div class="bookInfo">
-            	<div class="booktitle">谁的青春不迷茫<br>[精品]</div>
-                <div class="bookauthor">刘同</div>
-                <div class="bookdetail">影响无数年轻人，销量破百万的青春文学作品！</div>
-            </div>
-        </div>
-        <div class="booklist">
-        	<a target="_blank"  href="http://m.ireader.com/index.php?key=17W10909586&rgt=5&p2=104089&p5=16&pc=60&jump=jinli04147">
-            	<img src="images/book/zong.jpg" alt="总裁在上我在下" class="img">
-            </a>
-            <div class="bookInfo">
-            	<div class="booktitle">总裁在上我在下</div>
-                <div class="bookauthor">姜小牙</div>
-                <div class="bookdetail">偷我基因就想跑？留下！生一堆也妄想离开！</div>
-            </div>
-        </div>
-        <div class="booklist">
-        	<a target="_blank"  href="http://m.ireader.com/index.php?key=17W11002135&rgt=5&p2=104089&p5=16&pc=60&jump=jinli04148">
-            	<img src="images/book/you.jpg" alt="诱妃入帐：王的第五王妃" class="img">
-            </a>
-            <div class="bookInfo">
-            	<div class="booktitle">诱妃入帐：王的第五王妃</div>
-                <div class="bookauthor">云墨微染</div>
-                <div class="bookdetail">整形医生穿越嫁给残暴邪王！新王妃回门来虐渣！</div>
-            </div>
-        </div>
-        <div class="booklist">
-        	<a target="_blank"  href="http://m.ireader.com/index.php?key=17W10154955&rgt=5&p2=104089&p5=16&pc=60&jump=jinli04149">
-            	<img src="images/book/shen.jpg" alt="神魂至尊" class="img">
-            </a>
-            <div class="bookInfo">
-            	<div class="booktitle">神魂至尊</div>
-                <div class="bookauthor">八异</div>
-                <div class="bookdetail">医科学生穿越落魄少爷，祭炼神鼎丹方，踏无上巅峰！</div>
-            </div>
-        </div>
-        <div class="booklist">
-        	<a target="_blank"  href="http://m.ireader.com/index.php?key=17W10945727&rgt=5&p2=104089&p5=16&pc=60&jump=jinli041410">
-            	<img src="images/book/jue.jpg" alt="绝世战魂" class="img">
-            </a>
-            <div class="bookInfo">
-            	<div class="booktitle">绝世战魂</div>
-                <div class="bookauthor">极品妖孽</div>
-                <div class="bookdetail">偶获战神之魂，从此一路逆袭，碾压九界天才！</div>
-            </div>
-        </div>
-        <div class="booklist">
-        	<a target="_blank"  href="http://m.ireader.com/index.php?key=17W10879611&rgt=5&p2=104089&p5=16&pc=60&jump=jinli0415">
-            	<img src="images/book/tou.jpg" alt="偷影子的人[精品]" class="img">
-            </a>
-            <div class="bookInfo">
-            	<div class="booktitle">偷影子的人[精品]</div>
-                <div class="bookauthor">马克·李维</div>
-                <div class="bookdetail">斯皮尔伯格只看两页就买下电影版权的神作</div>
-            </div>
-        </div>
-        <div class="booklist">
-        	<a target="_blank"  href="http://m.ireader.com/index.php?key=17W11029913&rgt=5&p2=104089&p5=16&pc=60&jump=jinli04146">
-            	<img src="images/book/xia.jpg" alt="夏有乔木雅望天堂（全集）" class="img">
-            </a>
-            <div class="bookInfo">
-            	<div class="booktitle">夏有乔木雅望天堂（全集）</div>
-                <div class="bookauthor">籽月</div>
-                <div class="bookdetail">吴亦凡主演同名电影，关于青春的虐心告白</div>
-            </div>
-        </div>
-    </div>
-    <div id="down">
-        下拉更精彩
-    </div>-->
 </div>
 
-<!--活动规则-->
-<!--<div id="activeRuleWrap">
-	<div id="activeRuleDiv" class="pf t0">
-        <div class="rules prizeWrap" style="display:none;">
-        	<img src="images/rule.png" alt="活动规则" class="rule-pic">
-            <div>1、参与方式：点击转盘抽奖，每人只有三次抽</div>
-            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;奖机会。</div>
-            <div>2、活动时间：4月23日当天</div>
-            <div>3、奖品设置：</div>
-            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;一等奖一名：金立M5+手机；</div>
-            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;二等奖二名：掌阅电纸书（价值899元）</div>
-            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;三等奖十名：掌阅电子台灯（价值198元）</div>
-            <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;阳光普照奖：随机获得100-500阅饼</div>
-            <div class="tr">（可前往掌阅书城兑换买书）</div>
-            <div style="margin-bottom:2em;">4、工作日上班之后，工作人员会邮寄奖品</div>
-       	    <img src="images/close-button.png" alt="关闭按钮" class="close-button">     
-        </div>
-    </div>
-</div>
--->
 <!--点击出现弹窗-->
-<div id="divWrap" style="display:none;">
+<div id="divWrap" style="display:block;">
 	<div id="popDiv" class="pf t0">
-    	<!--月饼券-->
+    	<!--券-->
         <div class="yuebing prizeWrap" style="display:none;">
         	<img src="images/p-quan.png" alt="奖品" class="img prize">
        	    <img src="images/close-button.png" alt="关闭按钮" class="close-button">
@@ -279,7 +127,7 @@
         </div>
         <!--实物奖品-->
         <div class="jdk prizeWrap" style="display:none;">
-        	<img src="" alt="奖品" class="img prize">
+        	<img src="images/p-ireader.png" alt="奖品" class="img prize">
             <span class="get tc">领取并填写收货地址</span>
             <span class="inaddress tc">请留下你的联系方式，工作日上班之后我们会尽快邮寄的形式送到你手中~</span>
        	    <img src="images/close-button.png" alt="关闭按钮" class="close-button">     
@@ -325,11 +173,22 @@
         </div>
     </div>
 </div>
-<div class="load"><img src="images/loading.gif" alt="" class="load-img"></div>
-<div id="tipsWrap">
-	<div class="success pf l0 t0"><img src="images/fail.png" alt="很遗憾" class="img"></div>
-	<div class="error pf l0 t0"><img src="images/over.png" alt="机会用完了" class="img"></div>
+<!--话费100元-->
+<div class="chongzhi prizeWrap  pa l0 t0" style="display:none;">
+    <img src="images/16.png" alt="奖品" class="img prize">
+    <div class="hongbaoForm" style="display:block;">
+        <input type="tel" class="phoneNum" placeholder="请输入手机号码">
+        <input type="button" value="确定" class="phoneCon">
+    </div>
+    <div class="hasHongbao" style="display:none">
+        中奖号码为&nbsp;<span class="hasNum">13856487956</span>
+    </div>
+    <span class="inaddress tc" style="display:block;">请确认您的手机号准确无误，一旦确认，无法修改！</span>
+    <span class="inaddress tc" style="display:none;">2月15日之后我们会与您联络哦~</span>
+    <img src="images/close-button.png" alt="关闭按钮" class="close-button">     
 </div>
+
+<div class="load"><img src="images/loading.gif" alt="" class="load-img"></div>
 <div id="mask" class="pa l0 t0" style="display:none"></div>
 </body>
 </html>
